# seed-niche-finder

./: .env.example  .gitignore  README.md  generate_html_report.py  inspect_hypotheses_run.py  launch_research.bat  memory.md  pyproject.toml  run_niche.bat  start_api.bat
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_evidence_layer.py  0003_add_completed_no_evidence_status.py  0004_add_source_query_traceability.py  0005_add_provider_failures_table.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  router.py
app/api/routes/: exports.py  health.py  keywords.py  opportunities.py  (+1 more)
app/core/: __init__.py  config.py  errors.py  logging.py
app/db/: __init__.py  base.py  session.py
app/schemas/: __init__.py  common.py  evidence.py  export.py  keyword.py  opportunity.py  report.py  research.py
app/services/: __init__.py  depth_score.py  export_service.py  html_report_service.py  keyword_service.py  opportunity_service.py  providers.py  ranking.py  research_service.py  shared.py  summary_service.py
tests/: __init__.py  conftest.py  test_app_bootstrap.py  test_clustering_service.py  test_competition_model.py  test_depth_score.py  test_evidence_model_integrity.py  test_extraction_service.py  test_hardening_release_gate.py  test_html_report_service.py  test_hypothesis_service.py  test_provider_normalization.py  test_provider_registry.py  test_ranking_quality.py  test_research_api.py  test_research_service_evidence.py  test_scoring_service.py  test_semantic_normalization.py  test_service_listing.py  test_summary_service.py
(+56 files in other folders)
